--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,15 +1,18 @@
 detect:  # 检测哪些内容来判断
   move-rotation: true  # 视角移动
-  move-position: true  # 水平位置移动（可能误判）
+  move-position: false  # 水平位置移动（可能误判）
   chat: true  # 发送聊天
   command: true  # 发送指令
   mouse-click: true  # 鼠标点击
 
-move-sensitivity: 0.1  # 水平位移的灵敏度（防止误判）
+move-sensitivity: 2  # 水平位移的灵敏度（防止误判）
 
 afk-check-interval: 300  # AFK检测间隔（秒）
 afk-placeholder: "&o&8[AFK]"  # %isAFK%占位符显示内容
-afk-god-mode: true  # 玩家AFK时是否无敌
+afk-god-mode: false  # 玩家AFK时是否无敌
+view-distance:
+  enable: true               # 是否在 AFK 时调整视距
+  afk-view-distance: 4       # AFK 时的视距（区块数）
 
 msg-afk-self: "&e你挂机了。"
 msg-afk-broadcast: "&7%player% 挂机了。"
