--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,30 +1,6 @@
-name: AFK
-version: 1.1.1
-main: com.aFK.AFK
+name: afk
+version: ${version}
+main: com.github.stabrinai.afk.Afk
 api-version: '1.21'
-author: AFK
-folia-supported: true
-depend:
-  - PlaceholderAPI
-  - ProtocolLib
-
-commands:
-  afk:
-    description: 切换玩家的AFK状态
-    usage: /afk
-    permission: afk.command.afk
-  afkreload:
-    description: 重载插件配置
-    usage: /afkreload
-    permission: afk.command.reload
-
-permissions:
-  afk.command.afk:
-    description: Allows the player to use the /afk command
-    default: true
-  afk.command.reload:
-    description: Allows the player to use the /afkreload command
-    default: op
-  afk.bypass:
-    description: Allows the player to bypass AFK detection
-    default: false
+softdepend: [PlaceholderAPI]
+depend: [packetevents]
