--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,6 @@ name: afk
 version: ${version}
 main: com.github.stabrinai.afk.afk
 api-version: '1.21'
+folia-supported: true
 softdepend: [PlaceholderAPI]
 depend: [packetevents]
