--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.github.stabrinai'
-version = '1.2-SNAPSHOT'
+version = '1.2'
 
 repositories {
     mavenCentral()
@@ -31,8 +31,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
-    compileOnly("com.github.retrooper:packetevents-spigot:2.8.0-SNAPSHOT")
+    compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
+    compileOnly("com.github.retrooper:packetevents-spigot:2.9.4-SNAPSHOT")
     compileOnly("me.clip:placeholderapi:2.11.6")
 }
 
